--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,4 +1,40 @@
-.display-frame {
+.container {
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0 15px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.flex {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.input-controls {
+  padding: 20px 30px;
+  margin: 15px;
+}
+
+.search-view {
+  margin-right: 30px;
+}
+
+.content-viewer {
+  width: 100%;
+  height: 50vh;
+}
+
+.btn-search {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background-color: #002240;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
 }
