--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -26,7 +26,18 @@
 
 .content-viewer {
   width: 100%;
-  height: 50vh;
+  height: 20rem;
+  box-shadow: none;
+  border: 2px solid black;
+  border-radius: 8px;
+  z-index: 2;
+  overflow: auto;
+}
+
+iframe {
+  border-style: none;
+  border-color: none;
+  border-image: none;
 }
 
 .btn-search {
@@ -37,4 +48,33 @@
   color: #fff;
   border: none;
   border-radius: 5px;
+}
+
+.input-controls input {
+  width: 100%;
+  margin-right: 10px;
+  height: 2rem;
+  font-size: 12px;
+  outline: none;
+  border-radius: 8px;
+}
+
+@media (max-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .search-view {
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 540px) {
+  .flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  .input-controls input {
+    margin-bottom: 15px;
+  }
 }
