--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,53 @@
 * {
   background-color: #e5e5e5;
+  margin: 0;
+  padding: 0;
+  /* box-sizing: border-box; */
+  font-family: montserrat, sans-serif;
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+  font-family: "Inter";
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.login-form > h1 {
+  font-size: 35px;
+  margin-bottom: 15px;
+  padding-bottom: 10px;
+  letter-spacing: -1px;
+}
+
+.login-form > input {
+  min-width: 50vw;
+  padding: 20px 0;
+  padding-left: 15px;
+  margin-bottom: 10px;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.24);
+  font-family: "Inter";
+  border-radius: 5px;
+  font-size: 15px;
+}
+
+.submit-btn {
+  padding: 17px 30px;
+  margin-top: 10px;
+  background: black;
+  border: none;
+  color: white;
+  font-size: 14px;
+  font-family: "Inter";
+  border-radius: 3px;
 }
 
 .welcome {
@@ -7,6 +55,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin: 15px 10px;
 }
 
 .btn {
