--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -28,7 +28,7 @@
   width: 100%;
   height: 20rem;
   box-shadow: none;
-  border: 2px solid black;
+  border: 2px solid #002240;
   border-radius: 8px;
   z-index: 2;
   overflow: auto;
@@ -59,7 +59,7 @@ iframe {
   font-size: 12px;
   outline: none;
   border-radius: 8px;
-  border: 2px solid black;
+  border: 2px solid #002240;
 }
 
 @media (max-width: 768px) {
